# bufferodrome

1_raw_write/: README.md  write.s
2_partial_write/: README.md  write.s
3_c_raw_write/: Makefile  README.md  write.c
4_libc_buffered/: Makefile  README.md  libc_buffered.c
5_c_isatty/: Makefile  README.md  c_isatty.c
6_c_setvbuf/: Makefile  README.md  c_setvbuf.c
7_stdbuf/: Makefile  README.md  prog.c
8_rust_buffering/: Cargo.toml  README.md  run.sh
9_file_ptr_internals/: Makefile  README.md  file_ptr_internals.c
